hopefully fixes title links on mobile

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a:hover{
   margin-top:20px;
   margin-bottom:40px;#
 }
-#nav:nth-child(3){padding-right:0}
+#nav:nth-child(4){padding-right:0}
 #nav li{
   display:inline;
   color:#9b9b9b;
